Add force-push alias

--- a/git/config
+++ b/git/config
@@ -1,4 +1,5 @@
 [alias]
+	force-push = push --force-with-lease --force-if-includes
 	graph = log --all --graph
 [format]
 	pretty = tformat:%C(auto)%h %C(green)%cd%C(auto) %s %C(cyan)@%an%C(auto)%d
